# salary_api

./: .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  salary.db
alembic/: env.py
alembic/versions/: migration_ammend_user.py  migration_create_tables.py
app/: config.py  database.py  models.py  schemas.py
app/auth/: authenticate.py  jwt_handler.py
app/crud/: base.py  crud.py
app/routers/: main_router.py  salary.py  user.py
infra/: docker-compose.yml  env_example.env
salary_api/: main.py  requirements.txt
salary_api/alembic/: env.py
salary_api/alembic/versions/: migration_create_tables.py
salary_api/api/: database.py  models.py  schemas.py
salary_api/api/auth/: authenticate.py  jwt_handler.py
salary_api/api/crud/: base.py  crud.py
salary_api/api/routers/: salary.py  user.py
salary_api/app/: models.py
salary_api/app/auth/: authenticate.py
salary_api/app/crud/: crud.py
salary_api/app/routers/: main_router.py  user.py
salary_api/tests/: conftest.py  test_db.py  test_routes_salary.py  test_routes_user.py
