[tool.poetry]
name = "salary-api"
version = "0.1.0"
description = ""
authors = ["Константин Харьков <stenkh@yandex.ru>"]
readme = "README.md"
packages = [{include = "salary_api"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
